--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>Robos para Cassinos Online</h1>
 Dinheiro fácil é so midía, isso nao existe, toda riqueza teve dias de luta e dias de glória.
-Porém, temos acesso a horarios pagantes nos seguintes jogos: <strong>Fortune Tiger e Fortune Ox.</strong>. Através dos sinais que o nosso robô te dá com até 95% de 
-acertividade, você faz sua aposta e segue o passo a passo que te ensinamo para apender fazer dinheiro de verdade.
+Porém, temos acesso a horarios pagantes nos seguintes jogos: <strong>Fortune Tiger e Fortune Ox.</strong>. 
+<h1>Através dos sinais que o nosso robô te dá com até 95% de 
+acertividade, você faz sua aposta e segue o passo a passo que te ensinamo para apender fazer dinheiro de verdade.</h1>
