--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1>Robos para Cassinos Online</h1>
 <img id="logo" src="ing.jpg" alt="Pensamento Computacional"
 <h2>Dinheiro fácil é so midía, isso nao existe, toda riqueza teve dias de luta e dias de glória.
-Porém, temos acesso a horarios pagantes nos seguintes jogos: <strong>Fortune Tiger e Fortune Ox.<h2></strong>. 
+Porém, temos acesso a horarios pagantes nos seguintes jogos: <strong>Fortune Tiger e Fortune Ox.</strong></h2> 
 <h3>Através dos sinais que o nosso robô te dá com até 95% de 
 acertividade, você faz sua aposta e segue o passo a passo que 
  te ensinamo para apender fazer dinheiro de verdade.</h3>
