--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 Porém, temos acesso a horarios pagantes nos seguintes jogos: <strong>Fortune Tiger e Fortune Ox.</strong></h2> 
 <h3>Através dos sinais que o nosso robô te dá com até 95% de 
 acertividade, você faz sua aposta e segue o passo a passo que 
- te ensinamo para apender fazer dinheiro de verdade.</h3>
+ te ensinamo para apender fazer dinheiro de verdade</h3>
  </body>
  </html>
